--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ Psycopg2==2.6.1
 Flask-SQLAlchemy==2.1
 Flask-Migrate==1.8.0
 Flask-Script==2.0.5
+Flask-Bcrypt==0.7.1
+Flask-Login==0.3.2
+Flask-RESTful==0.3.5
